--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Raleway", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     text-align: center;
     margin-top: 50px;
     background-color: #111;
@@ -7,8 +11,16 @@ body {
 }
 
 h1 {
-    font-size: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 40%;
+    margin-bottom: 10%;
+    font-size: 2.5rem;
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
+    letter-spacing: 1px;
+    border-bottom: 1px solid white;
+    width: 18%;
 }
 
 .bulb-row {
@@ -18,25 +30,29 @@ h1 {
     margin-top: 20px;
 }
 
+img.bulb {
+    cursor: pointer;
+    transition: filter 0.4s, box-shadow 0.4s, transform 0.4s;
+    filter: brightness(50%);
+}
+
 .bulb {
     width: 60px;
     height: 60px;
     border-radius: 50%;
-    background: radial-gradient(circle, #444 20%, #222 100%);
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.8);
+    /* background: radial-gradient(circle, #444 20%, #222 100%); */
+    background: transparent;
     cursor: pointer;
     transition: background-color 0.4s, box-shadow 0.4s;
 }
 
 .bulb.on {
-    background: radial-gradient(circle, #ffeb3b 30%, #fbc02d 80%);
-    box-shadow: 0 0 25px rgba(255, 255, 100, 0.7), 0 0 60px rgba(255, 255, 150, 0.5);
+    filter: drop-shadow(1px 1px 10px #ffeb3b);
 }
 
 .output {
-    margin-top: 30px;
+    margin-top: 10%;
     font-size: 28px;
     font-weight: bold;
-    color: #f1c40f;
-    text-shadow: 2px 2px 6px rgba(255, 255, 150, 0.8);
+    color: #f1470f;
 }
