--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    font-family: "Raleway", serif;
-    font-optical-sizing: auto;
+
+    font-family: "Poppins", serif;
+    font-weight: 700;
     font-style: normal;
+
     text-align: center;
     margin-top: 50px;
     background-color: #111;
-    color: #fff;
 }
 
 h1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 40%;
-    margin-bottom: 10%;
-    font-size: 2.5rem;
+    color: rgb(177, 177, 177);
+    margin-bottom: 8%;
+    font-size: 3.5rem;
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
     letter-spacing: 1px;
-    border-bottom: 1px solid white;
-    width: 18%;
 }
 
 .bulb-row {
@@ -37,8 +33,8 @@ img.bulb {
 }
 
 .bulb {
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     /* background: radial-gradient(circle, #444 20%, #222 100%); */
     background: transparent;
@@ -51,8 +47,11 @@ img.bulb {
 }
 
 .output {
-    margin-top: 10%;
-    font-size: 28px;
-    font-weight: bold;
-    color: #f1470f;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 8%;
+    color: white;
+    flex-direction: column;
+    font-size: 2rem;
 }
