--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
-body {
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     font-family: "Poppins", serif;
     font-weight: 700;
     font-style: normal;
-
     text-align: center;
-    margin-top: 50px;
-    background-color: #111;
+}
+
+html{
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    background: linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9)),url("https://images4.alphacoders.com/211/211724.jpg");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 h1 {
-    color: rgb(177, 177, 177);
+    margin-top: 50px;
+    color: whitesmoke;
     margin-bottom: 10%;
-    font-size: 3.5rem;
-    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.2);
+    font-size: 2.8rem;
+    text-shadow: 1px 1px 3px rgba(203, 203, 203, 0.729);
     letter-spacing: 1px;
 }
 
@@ -31,20 +44,19 @@ img.bulb {
     cursor: pointer;
     transition: filter 0.4s, box-shadow 0.4s, transform 0.4s;
     filter: brightness(50%);
-}
-
-.bulb {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    /* background: radial-gradient(circle, #444 20%, #222 100%); */
-    background: transparent;
-    cursor: pointer;
-    transition: background-color 0.4s, box-shadow 0.4s;
+    -webkit-tap-highlight-color: transparent; 
 }
 
 .bulb.on {
     filter: drop-shadow(1px 1px 10px #ffeb3b);
+}
+
+.binary-label {
+    font-family: 'Poppins', serif;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .output {
@@ -52,8 +64,10 @@ img.bulb {
     align-items: center;
     justify-content: center;
     margin-top: 8%;
-    /* margin-bottom: 15%; */
-    color: white;
+    color: whitesmoke;
     flex-direction: column;
-    font-size: 2rem;
+    font-size: 1.6rem;
+    text-align: center;
+    text-shadow: 1px 1px 3px rgba(203, 203, 203, 0.729);
 }
+
