--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h1 {
     color: whitesmoke;
     margin-bottom: 10%;
     font-size: 2.8rem;
-    text-shadow: 1px 1px 3px rgba(203, 203, 203, 0.729);
+    text-shadow: 1px 1px 3px rgb(255, 255, 255);
     letter-spacing: 1px;
 }
 
@@ -48,6 +48,10 @@ img.bulb {
     height: 100px;
     border-radius: 50%;
     -webkit-tap-highlight-color: transparent; 
+}
+
+img.bulb:hover{
+    transform: scale(1.1);
 }
 
 .bulb.on {
